tests/rgs/valid/condition_not.rgs
STORY quest PRIORITY 1.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    CONDITION is_tired MYSELF.
    PHASE active.
    AGENT Hero:
        DURING active:
            WHEN spotted ENVIRONMENT IF NOT is_tired MYSELF:
                DO run.
