tests/rgs/syntax_errors/phase_missing_period.rgs
STORY quest PRIORITY 1.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    PHASE active
    AGENT Hero:
        DURING ALWAYS:
            WHEN spotted ENVIRONMENT:
                DO run.
